crates/ir/tests/snapshots/lower_test__sum_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module sum_basic

type Option[a] = Some#0(a) | None#1

fn wrap(v0: s7) -> Option[s7] =
  let v1: ~Option[s7] = construct Option::Some#0(v0)
  v1
