crates/ir/tests/snapshots/lower_test__to_json_bool.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module to_json_bool

; extern json_to_string
; extern println
; extern to_json

fn main() -> Unit =
  let v0: Json = call to_json(true)
  let v1: String = call json_to_string(v0)
  let v2: Unit = call println(v1)
  v2
