crates/ir/tests/snapshots/lower_test__to_json_custom.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module to_json_custom

struct Point { x: Int, y: Int }

type Json = JNull#0 | JBool#1(Bool) | JNum#2(Float) | JStr#3(String) | JArr#4(List[Json]) | JObj#5(Map[String, Json])
type Result[f, e] = Ok#0(b) | Err#1(a)
type Option[g] = Some#0(c) | None#1
type Ordering = LT#0 | EQ#1 | GT#2
type List[h] = Cons#0(d, List[d]) | Nil#1

fn f0 main() -> Unit =
  let v0: ~Point = construct Point(1, 2)
  let v1: Json = call f69(v0)
  let v2: String = call f67(v1)
  let v3: Unit = call f56(v2)
  v3
