crates/ir/tests/snapshots/lower_test__to_json_int.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module to_json_int

type Ordering = LT#0 | EQ#1 | GT#2
type List[e] = Cons#0(a, List[a]) | Nil#1
type Result[g, f] = Ok#0(c) | Err#1(b)
type Option[h] = Some#0(d) | None#1
type Json = JNull#0 | JBool#1(Bool) | JNum#2(Float) | JStr#3(String) | JArr#4(List[Json]) | JObj#5(Map[String, Json])

fn f0 main() -> Unit =
  let v0: Json = call f67(42)
  let v1: String = call f66(v0)
  let v2: Unit = call f56(v1)
  v2
