crates/ir/tests/snapshots/lower_test__to_json_list.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module to_json_list

; extern json_to_string
; extern println
; extern to_json

fn main() -> Unit =
  let v0: ~List[Int] = construct List::Nil#1()
  let v1: ~List[Int] = construct List::Cons#0(3, v0)
  let v2: ~List[Int] = construct List::Cons#0(2, v1)
  let v3: ~List[Int] = construct List::Cons#0(1, v2)
  let v4: Json = call to_json(v3)
  let v5: String = call json_to_string(v4)
  let v6: Unit = call println(v5)
  v6
