crates/ir/tests/snapshots/lower_test__to_json_option.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module to_json_option

; extern json_to_string
; extern println
; extern to_json

fn main() -> Unit =
  let_join v9(v0: ~Option[Int]) =
    let v2: Json = call to_json(v0)
    let v3: String = call json_to_string(v2)
    let v4: Unit = call println(v3)
    let v5: ~Option[Int] = construct Option::Some#0(42)
    let v6: Json = call to_json(v5)
    let v7: String = call json_to_string(v6)
    let v8: Unit = call println(v7)
    v8
  in
  let v1: ~Option[Int] = construct Option::None#1()
  jump v9(v1)
