crates/ir/tests/snapshots/lower_test__trait_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module trait_basic

struct Point { x: Int, y: Int }
; extern Point
; extern eq

fn main() -> Bool =
  let v0: ~Point = call Point(1, 2)
  let v1: ~Point = call Point(1, 2)
  let v2: Bool = call eq(v0, v1)
  v2
